[package]
name = "tcp-echo-server"
version = "0.1.0"
authors = ["Phil Poore <phil.j.poore@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3", features = ["full"]}
log = "*"
simple_logger = "*"